# vr.cli

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  README  README.rst  appveyor.yml  setup.cfg  setup.py  swarms.py  test_cli.py
cagey/: commands.py  models.py  swarms.py  test_models.py
docs/: conf.py  index.rst
vr/: cli.py
